--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="minecraft-frame">
             <div class="profile-card">
                 <div class="profile-image">
-                    <img src="../profile.jpg" alt="Profile Picture">
+                    <img src="./profile.jpg" alt="Profile Picture">
                 </div>
                 <h1 class="minecraft-text">Rudra Mistry</h1>
                 <p class="bio minecraft-text">Full Stack Developer</p>
