--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link rel="preload" href="./profile.jpg" as="image">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" crossorigin="anonymous"></script>
+    <script src="preload.js"></script>
 </head>
-<body>
+<body class="minecraft-theme">
     <canvas id="bg-canvas"></canvas>
     <div id="loading-screen" class="loading-screen">
         <div class="loading-content">
