--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="minecraft-frame">
             <div class="profile-card">
                 <div class="profile-image">
-                    <img src="./profile.jpg" alt="Profile Picture">
+                    <img src="./profile.jpg?v=1" alt="Profile Picture" onerror="this.onerror=null; this.src='https://i.imgur.com/MVCsKrK.png';">
                 </div>
                 <h1 class="minecraft-text">Rudra Mistry</h1>
                 <p class="bio minecraft-text">Full Stack Developer</p>
